# duckdb-ros-extension

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: functions.md
src/: message_def_parser.cpp  message_parser.cpp  ros_bag_reader.cpp  ros_extension.cpp  ros_reader_options.cpp  ros_scanner.cpp  ros_schema.cpp  ros_transform.cpp  ros_value.cpp
src/embag/: LICENSE  decompression.hpp  embag.cpp  embag.hpp  message_def_parser.cpp  message_def_parser.hpp  message_parser.cpp  message_parser.hpp  ros_bag_types.hpp  ros_message.hpp  ros_msg_types.hpp  ros_value.hpp  span.hpp  util.hpp  view.cpp  view.hpp
src/functions/: ros_bag_functions.cpp  ros_bag_info.cpp  ros_info.cpp
src/include/: decompression.hpp  message_def_parser.hpp  message_parser.hpp  record_parser.hpp  resizable_buffer.hpp  ros_bag_metadata.hpp  ros_bag_reader.hpp  ros_bag_types.hpp  ros_extension.hpp  ros_functions.hpp  ros_message.hpp  ros_msg_types.hpp  ros_reader_options.hpp  ros_scanner.hpp  ros_schema.hpp  ros_transform.hpp  ros_value.hpp
src/include/functions/: ros_bag_functions.hpp  ros_bag_info.hpp
test/sql/: ros.test  rosbag_info.test
